changes for unintentional horizontal scroll issue

--- a/web/src/components/AppBar/_AppBar.scss
+++ b/web/src/components/AppBar/_AppBar.scss
@@ -8,7 +8,6 @@ $app-menu-notification-size: 1.2rem;
 	width: 100%;
 	min-height: $navigation_bar-height;
 	height: $navigation_bar-height;
-	display: flex;
 	font-size: $navigation_bar-font_size;
 	font-weight: bold;
 	background: $app-bar-background-color;
@@ -116,6 +115,7 @@ $app-menu-notification-size: 1.2rem;
 		color: $base_top-bar-navigation_text;
 		cursor: pointer;
 		margin-right: 0.8rem;
+		width: 15rem;
 
 		svg {
 			.account-inactive {
@@ -1221,4 +1221,10 @@ $app-menu-notification-size: 1.2rem;
 		height: 100% !important;
 		width: 100% !important;
 	}
+}
+
+.app-menu-bar-wrapper {
+	flex-grow: 1;
+	flex-shrink: 1;
+	overflow-y: auto;
 }
